[package]
name = "jerome"
version = "0.2.0-dev"
edition = "2021"
authors = ["Jon Anderson <coding@jpanderson.dev>"]
license = "MIT"
description = "Does ROT13 decoding/encoding"
repository = "https://github.com/tedious-tools/jerome"
keywords = ["cli", "asdf"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
